--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nebraska Football — History Hub (Patched)</title>
+  <title>Nebraska Football — History Hub (Persistent)</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
   <style>
     :root{
@@ -18,11 +18,6 @@
     .logo{display:flex; align-items:center; gap:10px; font-weight:800; letter-spacing:.4px}
     .logo-badge{ width:34px; height:34px; border-radius:8px; display:grid; place-items:center; background:radial-gradient(90px 50px at -10% 120%,#ff2d2d,#d00000 60%,#880000); box-shadow: 0 6px 20px rgba(208,0,0,.45), inset 0 0 0 1px rgba(255,255,255,.09); font-weight:900; }
     .pill{ display:inline-flex; align-items:center; gap:8px; padding:8px 10px; border-radius:12px; background:var(--chip); color:var(--muted); font-size:13px; border:1px solid var(--ring); }
-    .controls{display:flex; gap:8px; align-items:center; flex-wrap:wrap}
-    select, input[type="number"], button{ font-family:inherit }
-    select, input[type="number"]{ background:var(--panel); border:1px solid var(--ring); color:var(--text); padding:8px 10px; border-radius:10px; }
-    .btn{ background:linear-gradient(180deg,#ff6868,#d00000); color:#fff; border:none; border-radius:10px; padding:10px 12px; cursor:pointer; font-weight:700; box-shadow:0 8px 26px rgba(208,0,0,.35); }
-    .btn.secondary{background:#1e2630; border:1px solid var(--ring); box-shadow:none; color:#d8e1ee}
     .layout{max-width:1200px; margin:16px auto; display:grid; grid-template-columns: 340px 1fr; gap:16px; padding:0 16px 24px}
     aside{ background:var(--panel); border:1px solid var(--ring); border-radius:16px; overflow:hidden; }
     .aside-head{padding:12px 14px; display:flex; gap:8px; align-items:center; justify-content:space-between; border-bottom:1px solid var(--ring); background:var(--panel-2)}
@@ -45,6 +40,10 @@
     tbody tr:hover{background:#121a21}
     .chip{display:inline-block; padding:3px 8px; border-radius:10px; background:#1e2630; border:1px solid var(--ring); color:#a9b3c2; font-size:12px}
     .home{color:#9dd5ff} .away{color:#ffc899} .bowl{color:#ffd36b}
+    .controls{display:flex; gap:12px; align-items:center}
+    .search{flex:1; position:relative;}
+    .search input{ width:100%; background:var(--panel); border:1px solid var(--ring); color:var(--text); padding:10px 12px 10px 36px; border-radius:12px; outline:none; caret-color:var(--accent); }
+    .search svg{position:absolute; left:10px; top:50%; transform:translateY(-50%); opacity:.6}
     footer{max-width:1200px;margin:18px auto 40px; color:#a9b3c2; font-size:12px; text-align:center}
     .muted{color:#a9b3c2}
     @media (max-width:1000px){.layout{grid-template-columns:1fr}}
@@ -57,11 +56,12 @@
         <div class="logo-badge">N</div>
         <div>Nebraska Football — History Hub</div>
       </div>
-
       <div class="pill" id="apiStatus"><span id="apiStatusText">API: not connected</span></div>
-
       <div class="controls">
-        <div class="pill">Tip: Cached-first, then background refresh.</div>
+        <div class="search">
+          <input id="search" type="search" placeholder="Search opponent, bowl, or venue…" />
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M21 21l-4.2-4.2M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z" stroke="currentColor" stroke-width="2"/></svg>
+        </div>
         <button class="btn secondary" id="clearCacheBtn" title="Clear cached seasons">Clear Cache</button>
         <button class="btn secondary" id="changeKeyBtn" title="Change API Key">API Key</button>
       </div>
@@ -74,11 +74,11 @@
         <div><strong>Seasons</strong> <span class="muted">1890–present</span></div>
         <div class="pill" id="leftMsg">Idle</div>
       </div>
-      <div class="aside-body">
+      <div class="aside-body" id="seasonScroll">
         <ul class="season-list" id="seasonList"></ul>
       </div>
       <div class="muted" style="padding:12px;border-top:1px solid var(--ring)">
-        Click a season to view instantly from cache (if present). Background refresh updates results silently.
+        Your selection and search are remembered between refreshes.
       </div>
     </aside>
 
@@ -118,22 +118,30 @@
   </div>
 
   <footer>
-    Patched: schema normalization for cached payloads (v1/v2), plus defensive rendering.
+    Persistent selection & search via localStorage + season data cached in IndexedDB.
   </footer>
 
   <script>
+    // -------- Helpers --------
     const $ = s => document.querySelector(s);
     const el = (t,c,txt)=>{const e=document.createElement(t); if(c) e.className=c; if(txt) e.textContent=txt; return e;};
-    const wait = ms => new Promise(r=>setTimeout(r,ms));
 
-    // Normalize any payload (old: array, new: {games, cachedAt})
+    // Normalize payload: either array or {games,cachedAt}
     function normalizePayload(p){
       if(Array.isArray(p)) return { games: p, cachedAt: new Date(0).toISOString() };
       if(p && Array.isArray(p.games)) return { games: p.games, cachedAt: p.cachedAt || new Date().toISOString() };
       return { games: [], cachedAt: new Date(0).toISOString() };
     }
 
-    // IndexedDB helpers
+    // -------- Storage keys --------
+    const LS = {
+      key: "cfbd_key",
+      selected: "ui_selected_season",
+      scrollTop: "ui_seasons_scroll",
+      search: "ui_search_text"
+    };
+
+    // -------- IndexedDB --------
     const DB_NAME = "cfbdCache"; const STORE = "seasons";
     function idbOpen(){
       return new Promise((resolve,reject)=>{
@@ -160,11 +168,11 @@
       });
     }
 
-    // API
+    // -------- API --------
     const CFBD = {
       base: "https://api.collegefootballdata.com",
-      async get(path, params={}, attempt=0){
-        const key = localStorage.getItem("cfbd_key");
+      async get(path, params={}){
+        const key = localStorage.getItem(LS.key);
         if(!key) throw new Error("Missing CFBD API key");
         const url = new URL(this.base + path);
         Object.entries(params).forEach(([k,v])=> v!=null && url.searchParams.set(k,v));
@@ -177,6 +185,7 @@
       }
     };
 
+    // -------- State --------
     const state = {
       startYear: 1890,
       endYear: new Date().getFullYear(),
@@ -188,28 +197,47 @@
     function setLeft(msg){ $("#leftMsg").textContent = msg; }
 
     $("#changeKeyBtn").addEventListener("click", ()=>{
-      const v = prompt("Paste your CollegeFootballData API key (stored locally):", localStorage.getItem("cfbd_key") || "");
-      if(v){ localStorage.setItem("cfbd_key", v.trim()); setApiStatus("Key saved."); }
+      const v = prompt("Paste your CollegeFootballData API key (stored locally):", localStorage.getItem(LS.key) || "");
+      if(v){ localStorage.setItem(LS.key, v.trim()); setApiStatus("Key saved."); }
     });
     $("#clearCacheBtn").addEventListener("click", async ()=>{
       const db = await idbOpen();
-      await new Promise((resolve,reject)=>{
-        const tx = db.transaction(STORE,"readwrite"); const st = tx.objectStore(STORE);
-        const req = st.clear(); req.onsuccess = ()=> resolve(true); req.onerror = ()=> reject(req.error);
-      });
+      await new Promise((resolve,reject)=>{ const tx = db.transaction(STORE,"readwrite"); const st = tx.objectStore(STORE); const req = st.clear(); req.onsuccess=()=>resolve(true); req.onerror=()=>reject(req.error); });
       state.mem.clear(); setApiStatus("Cache cleared");
     });
 
+    // Search persistence
+    const searchInput = $("#search");
+    searchInput.value = localStorage.getItem(LS.search) || "";
+    searchInput.addEventListener("input", ()=>{
+      localStorage.setItem(LS.search, searchInput.value);
+      renderGamesFilter();
+    });
+
+    // Build list and restore scroll/selection
     function buildSeasonList(){
       const ul = $("#seasonList"); ul.innerHTML="";
       for(let y=state.endYear; y>=state.startYear; y--){
         const li = el("li"); const left = el("div","", y.toString()); const right = el("small","muted","");
         li.append(left,right);
-        li.addEventListener("click", ()=> selectSeason(y, li, right));
+        li.addEventListener("click", ()=> selectSeason(y, li, right, {save:true}));
         ul.appendChild(li);
       }
-      const first = ul.querySelector("li"); if(first) first.click();
+      // restore scroll
+      const savedScroll = parseInt(localStorage.getItem(LS.scrollTop)||"0",10);
+      $("#seasonScroll").scrollTop = isNaN(savedScroll)?0:savedScroll;
+
+      // restore selection
+      const saved = parseInt(localStorage.getItem(LS.selected)||"",10);
+      const target = [...ul.children].find(li => parseInt(li.firstChild.textContent,10)===saved);
+      if(target){ target.click(); }
+      else { const first = ul.querySelector("li"); if(first) first.click(); }
     }
+
+    // Observe and persist scroll
+    $("#seasonScroll").addEventListener("scroll", e=>{
+      localStorage.setItem(LS.scrollTop, String(e.target.scrollTop));
+    });
 
     async function fetchSeason(year){
       const [reg, post] = await Promise.all([
@@ -221,14 +249,12 @@
     }
 
     async function loadSeason(year){
-      // in-memory
       if(state.mem.has(year)) return normalizePayload(state.mem.get(year));
-      // idb
       const raw = await idbGet(`games-${year}`);
       if(raw){
         const parsed = normalizePayload(JSON.parse(raw));
         state.mem.set(year, parsed);
-        // background revalidate
+        // background refresh
         fetchSeason(year).then(fresh => {
           state.mem.set(year, fresh);
           idbSet(`games-${year}`, JSON.stringify(fresh));
@@ -236,14 +262,13 @@
         }).catch(()=>{});
         return parsed;
       }
-      // fetch fresh
       const fresh = await fetchSeason(year);
       state.mem.set(year, fresh);
       await idbSet(`games-${year}`, JSON.stringify(fresh));
       return normalizePayload(fresh);
     }
 
-    async function selectSeason(year, li, rightEl){
+    async function selectSeason(year, li, rightEl, {save}={save:false}){
       const ul = $("#seasonList"); [...ul.children].forEach(n=>n.classList.remove("active")); li.classList.add("active");
       $("#seasonTitle").textContent = `Season ${year}`; $("#seasonMeta").textContent = "…";
       setLeft("Loading…"); setApiStatus("Loading…");
@@ -253,6 +278,7 @@
         rightEl.textContent = `${$("#w").textContent}-${$("#l").textContent}${($("#t").textContent!=="0")?'-'+$("#t").textContent:''}`;
         setLeft("Ready"); setApiStatus(`Cached: ${new Date(payload.cachedAt).toLocaleString()}`);
         state.selected = year;
+        if(save){ localStorage.setItem(LS.selected, String(year)); }
       }catch(err){
         console.error(err);
         $("#gamesBody").innerHTML = `<tr><td colspan="9" class="muted" style="padding:18px">${err.message || "Failed to load season."}</td></tr>`;
@@ -261,14 +287,6 @@
     }
 
     function renderSeason(year, games){
-      // Defensive guard to avoid "games is not iterable"
-      if(!Array.isArray(games)){
-        $("#gamesBody").innerHTML = `<tr><td colspan="9" class="muted" style="padding:18px">No games available for ${year} (yet). Try again or clear cache.</td></tr>`;
-        $("#w").textContent = "0"; $("#l").textContent = "0"; $("#t").textContent = "0"; $("#conf").textContent = "—";
-        $("#seasonMeta").textContent = "—";
-        return;
-      }
-
       const body = $("#gamesBody"); body.innerHTML="";
       let w=0,l=0,t=0; const confSet = new Set();
       for(const g of games){
@@ -284,6 +302,12 @@
         const result = scoreKnown ? ((isHome?g.homePoints:g.awayPoints) > (isHome?g.awayPoints:g.homePoints) ? "W":"L") : "—";
         if(result==="W") w++; else if(result==="L") l++; else t++;
         const conf = isHome ? g.homeConference : g.awayConference; if(conf) confSet.add(conf);
+
+        // search filter
+        const q = (searchInput.value || "").toLowerCase();
+        const hay = [opp, oppConf, ha, type, g.venue||"", (date?date.toLocaleDateString():"")].join(" ").toLowerCase();
+        if(q && !hay.includes(q)) continue;
+
         const tr = document.createElement("tr");
         tr.innerHTML = `
           <td>${week}</td>
@@ -303,10 +327,10 @@
     }
 
     (function init(){
-      if(localStorage.getItem("cfbd_key")) setApiStatus("Key found");
+      if(localStorage.getItem(LS.key)) setApiStatus("Key found");
       else {
         const key = prompt("Enter your CollegeFootballData API key:");
-        if(key){ localStorage.setItem("cfbd_key", key.trim()); setApiStatus("Key saved"); }
+        if(key){ localStorage.setItem(LS.key, key.trim()); setApiStatus("Key saved"); }
       }
       buildSeasonList();
       setLeft("Idle");
